# Scrapping

./: FinalScrapper.ipynb  README.md  Scrapper-v2.ipynb  ScrapperTomates.ipynb  docker-compose.yaml
.github/workflows/: actions.yml
Documentacion/: Avances_Semanales  Diseño_de_arquitectura  Manual_de_usuario
notebooks/: scrap_licores.ipynb  scrap_tomates.ipynb
scrapper/: Dockerfile  main.py  pyproject.toml
scrapper/api_connection/: store.py
scrapper/driver/: driver.py
scrapper/licores/: models.py
scrapper/scrapper/: main.py
scrapper/scrapper/api_connection/: store.py
scrapper/scrapper/driver/: driver.py  search.py
scrapper/scrapper/licores/: models.py
scrapper/scrapper/tomates/: models.py
scrapper/tomates/: models.py
