[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = ""
authors = ["humbertoortuzar <hjortuzar@uc.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.5.0"
beautifulsoup4 = "^4.11.1"
pandas = "^1.5.1"
tqdm = "^4.64.1"
jupyter = "^1.0.0"
lxml = "^4.9.1"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
